Fixed image alignement from last commit

--- a/src/static/css/layout.css
+++ b/src/static/css/layout.css
@@ -89,9 +89,7 @@ table tr:nth-child(2n) {
 /* ---- Image and caption ---- */
 
 .figure {
-   display: block;
-   margin-left: auto;
-   margin-right: auto;
+   text-align: center;
 }
 
 .caption {
